Feature concurrency (#38)
* [PT-124] Concurrency for BTC endpoint (#37)

* bitcoin goroutine for handle multiple calls and update the swagger

* Rename the function name and remove the commented code

* solana concurrent requests

* update the solana swagger docs and accepts the headers from env

* [PT-131][PT-28] Concurrency for debank endpoint (#39)

* concurrent debank api calls

* update the swagger for debank and also add the format for all the provider controllers

* update the tag for debak swagger

* chore(): Conditional Fetch Debank API

* simple return type to pointer

* Solana API fix

* [PT-29] [PT-139] Coingecko pricefeed (#41)

* Coingecko setup

* Fetch the coingecko prices for bitcoin and solana

* Handle coingecko limit api call

* coingecko rate limit is exceeded, return nil not need to update the price feed

* Update the swagger for coingecko price feed struct

* conditional API fetch and fix some typos and also update the some migrations

* utc time management and fix some typos and also remove the duplicate migrations for coingecko

* update the github workflow

* [PT-133] Fetch all portfolio information (#40)

* Fetch all portfolio information

* Solana API fix

* [PT-29] [PT-139] Coingecko pricefeed (#41)

* Coingecko setup

* Fetch the coingecko prices for bitcoin and solana

* Handle coingecko limit api call

* coingecko rate limit is exceeded, return nil not need to update the price feed

* Update the swagger for coingecko price feed struct

* conditional API fetch and fix some typos and also update the some migrations

* utc time management and fix some typos and also remove the duplicate migrations for coingecko

* update the github workflow

* [PT-155] Error Handling for feature branch and folder restructure  (#42)

* refactor folder structure

* Error handling for providers

* remove the print form cherrors.go

* [PT-158] API responses (#43)

* Responses package
